# ComfyUI_Human_Parts

./: README.md  __init__.py  install.py  nodes.py  pyproject.toml  requirements.txt  utils.py
detector/: human_parts.py
